WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157700
[JSC][DFG] Fill spilled Int32 as Int32 instead of JSInt32
https://bugs.webkit.org/show_bug.cgi?id=157700
Summary
[JSC][DFG] Fill spilled Int32 as Int32 instead of JSInt32
Benjamin Poulain
Reported
2016-05-13 18:50:53 PDT
[JSC][DFG] Fill spilled Int32 as Int32 instead of JSInt32
Attachments
Patch
(2.35 KB, patch)
2016-05-13 18:55 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2016-05-13 18:55:40 PDT
Created
attachment 278906
[details]
Patch
Benjamin Poulain
Comment 2
2016-05-13 19:48:22 PDT
Conf#1 Conf#2 3d-cube 4.9415+-0.0241 4.9382+-0.0277 3d-morph 5.0339+-0.0263 ? 5.0421+-0.0286 ? 3d-raytrace 5.3659+-0.0353 5.3166+-0.0289 access-binary-trees 2.1113+-0.0165 2.1054+-0.0166 access-fannkuch 5.8704+-0.0379 ? 5.8838+-0.0461 ? access-nbody 2.5224+-0.0147 ? 2.5247+-0.0230 ? access-nsieve 2.9743+-0.0205 2.9484+-0.0187 bitops-3bit-bits-in-byte 1.0790+-0.0102 ? 1.0791+-0.0084 ? bitops-bits-in-byte 2.7283+-0.0208 2.7003+-0.0180 might be 1.0104x faster bitops-bitwise-and 2.0258+-0.0244 1.9974+-0.0145 might be 1.0142x faster bitops-nsieve-bits 3.0323+-0.0198 ? 3.0358+-0.0179 ? controlflow-recursive 2.3299+-0.0162 2.3085+-0.0137 crypto-aes 4.3833+-0.0306 ? 4.4088+-0.0387 ? crypto-md5 2.4429+-0.0194 ? 2.4453+-0.0305 ? crypto-sha1 2.2947+-0.0224 ? 2.3008+-0.0182 ? date-format-tofte 6.6351+-0.0392 6.6149+-0.0420 date-format-xparb 4.7885+-0.0353 ? 4.8458+-0.0402 ? might be 1.0120x slower math-cordic 2.8473+-0.0141 2.8456+-0.0152 math-partial-sums 4.1869+-0.0291 4.1708+-0.0293 math-spectral-norm 1.9936+-0.0199 1.9881+-0.0129 regexp-dna 6.5530+-0.0450 6.5463+-0.0437 string-base64 4.2178+-0.0300 ? 4.2473+-0.0410 ? string-fasta 5.6388+-0.0206 ? 5.6473+-0.0311 ? string-tagcloud 8.6015+-0.0592 8.5478+-0.0443 string-unpack-code 18.5916+-0.1176 18.5908+-0.1253 string-validate-input 4.1875+-0.0399 4.1431+-0.0228 might be 1.0107x faster <arithmetic> 4.5145+-0.0074 4.5086+-0.0067 might be 1.0013x faster
Benjamin Poulain
Comment 3
2016-05-13 20:44:44 PDT
Top benchmarks on Haswell. This one is 20 runs. The previous Sunspider was 300 runs. Conf#1 Conf#2 SunSpider: 3d-cube 4.9574+-0.0891 4.9430+-0.0954 3d-morph 4.9388+-0.0297 4.8919+-0.0174 3d-raytrace 5.2622+-0.0595 ? 5.4115+-0.2804 ? might be 1.0284x slower access-binary-trees 2.0635+-0.0317 ? 2.1085+-0.0404 ? might be 1.0218x slower access-fannkuch 5.9016+-0.1302 5.8467+-0.0881 access-nbody 2.4959+-0.0657 2.4613+-0.0278 might be 1.0141x faster access-nsieve 2.9198+-0.0226 ? 2.9284+-0.0177 ? bitops-3bit-bits-in-byte 1.0931+-0.0454 1.0696+-0.0154 might be 1.0219x faster bitops-bits-in-byte 2.7053+-0.0961 ? 2.7431+-0.0916 ? might be 1.0140x slower bitops-bitwise-and 1.9427+-0.0229 ? 1.9536+-0.0348 ? bitops-nsieve-bits 3.0542+-0.1227 2.9890+-0.0390 might be 1.0218x faster controlflow-recursive 2.3001+-0.0464 2.2840+-0.0334 crypto-aes 4.3161+-0.0862 4.3061+-0.0573 crypto-md5 2.3959+-0.0217 ? 2.4215+-0.0569 ? might be 1.0107x slower crypto-sha1 2.2578+-0.0299 ? 2.3460+-0.0910 ? might be 1.0391x slower date-format-tofte 6.5582+-0.1004 ? 6.6182+-0.1276 ? date-format-xparb 4.7042+-0.0231 ? 4.7674+-0.0738 ? might be 1.0134x slower math-cordic 2.8144+-0.0234 ? 2.8246+-0.0468 ? math-partial-sums 4.0589+-0.0571 ? 4.0854+-0.0723 ? math-spectral-norm 1.9528+-0.0183 ? 1.9687+-0.0414 ? regexp-dna 6.4621+-0.1110 6.4458+-0.1599 string-base64 4.1436+-0.0804 4.1118+-0.0975 string-fasta 5.6151+-0.0947 5.5571+-0.0130 might be 1.0104x faster string-tagcloud 8.3908+-0.0795 ? 8.4332+-0.0937 ? string-unpack-code 18.2753+-0.3734 ? 18.5037+-0.4294 ? might be 1.0125x slower string-validate-input 4.0833+-0.0296 ? 4.1051+-0.0449 ? <arithmetic> 4.4486+-0.0167 ? 4.4664+-0.0241 ? might be 1.0040x slower Conf#1 Conf#2 Octane: encrypt 0.15797+-0.00058 ? 0.15803+-0.00046 ? decrypt 2.82367+-0.01471 ? 2.82830+-0.01320 ? deltablue x2 0.12780+-0.00146 0.12735+-0.00126 earley 0.28553+-0.00107 0.28531+-0.00119 boyer 4.97242+-0.06258 4.97223+-0.05959 navier-stokes x2 4.93535+-0.00916 4.93467+-0.00789 raytrace x2 0.78737+-0.00341 0.78715+-0.00257 richards x2 0.08215+-0.00074 0.08196+-0.00035 splay x2 0.33414+-0.00203 0.33329+-0.00149 regexp x2 16.15556+-0.16338 ? 16.26468+-0.23601 ? pdfjs x2 38.77321+-0.20917 38.62238+-0.22867 mandreel x2 42.08000+-0.09587 ? 42.13990+-0.09957 ? gbemu x2 30.01199+-1.22593 ? 30.57350+-1.29513 ? might be 1.0187x slower closure 0.52345+-0.00238 0.52231+-0.00150 jquery 6.49587+-0.02261 6.47750+-0.01795 box2d x2 9.25799+-0.04139 9.21974+-0.06658 zlib x2 357.03818+-3.29537 ? 359.77506+-3.33010 ? typescript x2 618.77299+-3.42168 616.53756+-3.35643 <geometric> 5.01809+-0.01563 ? 5.02194+-0.01507 ? might be 1.0008x slower Conf#1 Conf#2 Kraken: ai-astar 85.868+-0.478 85.479+-0.363 audio-beat-detection 38.678+-0.150 38.676+-0.134 audio-dft 98.717+-1.358 98.359+-1.404 audio-fft 30.839+-0.038 ? 30.850+-0.052 ? audio-oscillator 47.836+-0.158 47.764+-0.471 imaging-darkroom 60.223+-0.577 60.055+-0.560 imaging-desaturate 44.533+-0.155 44.402+-0.143 imaging-gaussian-blur 62.968+-2.329 ? 64.069+-1.218 ? might be 1.0175x slower json-parse-financial 34.494+-0.610 34.296+-0.549 json-stringify-tinderbox 22.822+-0.672 22.599+-0.463 stanford-crypto-aes 37.546+-0.140 ? 37.860+-0.535 ? stanford-crypto-ccm 31.595+-0.678 ? 32.222+-0.707 ? might be 1.0198x slower stanford-crypto-pbkdf2 93.477+-0.581 93.220+-0.567 stanford-crypto-sha256-iterative 35.891+-0.160 35.742+-0.122 <arithmetic> 51.820+-0.212 ? 51.828+-0.117 ? might be 1.0001x slower Conf#1 Conf#2 AsmBench: bigfib.cpp 437.7308+-4.0792 436.9453+-3.4592 cray.c 367.9311+-1.4246 ^ 365.0532+-0.7962 ^ definitely 1.0079x faster dry.c 446.2151+-22.9197 425.1079+-11.7998 might be 1.0497x faster FloatMM.c 715.3051+-2.0588 ? 716.3432+-2.5252 ? gcc-loops.cpp 3658.6799+-5.8416 3655.0468+-8.4293 n-body.c 799.3762+-1.8404 798.8769+-1.5007 Quicksort.c 393.7109+-1.9837 ? 393.7514+-1.4553 ? stepanov_container.cpp 3278.1260+-10.0238 ? 3278.4950+-11.6673 ? Towers.c 271.2746+-0.6767 ? 271.6241+-0.9579 ? <geometric> 720.5749+-3.7109 716.3157+-1.9892 might be 1.0059x faster Conf#1 Conf#2 Geomean of preferred means: <scaled-result> 30.2150+-0.0496 30.2075+-0.0527 might be 1.0002x faster
Michael Saboff
Comment 4
2016-05-13 20:57:22 PDT
Comment on
attachment 278906
[details]
Patch r=me
WebKit Commit Bot
Comment 5
2016-05-16 20:27:49 PDT
Comment on
attachment 278906
[details]
Patch Clearing flags on attachment: 278906 Committed
r200990
: <
http://trac.webkit.org/changeset/200990
>
WebKit Commit Bot
Comment 6
2016-05-16 20:27:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug